[package]
name = "mipsasm"
description = "A MIPS assembler targeting the N64"
documentation = "https://docs.rs/mipsasm"
repository = "https://github.com/imaandrew/mipsasm/"
version = "2.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["mipsasm", "mips", "assembler", "assembly", "n64"]
categories = ["command-line-utilities", "encoding", "hardware-support"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.36", features = ["cargo", "derive"] }
indexmap = "2.9.0"
num = "0.4.3"
once_cell = "1.21.3"
regex = "1.11.1"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
yaml-rust = "0.4.5"

[lib]
name = "mipsasm"
path = "src/lib.rs"

[[bin]]
name = "mipsasm"
path = "src/bin/bin.rs"
